INTERNAL: MobileBottomBar visibility fixed

--- a/frontend-html/src/gui/connections/MobileComponents/MobileMain.module.scss
+++ b/frontend-html/src/gui/connections/MobileComponents/MobileMain.module.scss
@@ -25,6 +25,6 @@ along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
 }
 
 .root :global(.sidebar){
-  height: unset;
+  height: 50%;
   flex-grow: 1;
 }
