--- a/frontend-html/src/gui/connections/MobileComponents/MobileSearch.module.scss
+++ b/frontend-html/src/gui/connections/MobileComponents/MobileSearch.module.scss
@@ -1,4 +1,8 @@
 
+.root{
+  height: 100%;
+}
+
 .root :global(.searchView){
   width: unset;
 }
